--- a/public/manifest.chromium.json
+++ b/public/manifest.chromium.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "NuTab",
   "short_name": "NuTab",
-  "version": "1.0",
-  "description": "Replaces your start- or new tab page with a minimalistic clock and beautiful backgrounds.",
+  "version": "1.0.1",
+  "description": "Replaces your new tab page with a minimalistic clock and beautiful backgrounds.",
   "author": "Freddie Lust-Hed",
   "homepage_url": "https://github.com/Musenkishi/nutab",
   "icons": {
