--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,14 +2,12 @@
   "manifest_version": 3,
   "name": "NuTab",
   "short_name": "NuTab",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Replaces your new tab page with a minimalistic clock and beautiful backgrounds.",
   "author": "Freddie Lust-Hed",
   "homepage_url": "https://github.com/Musenkishi/nutab",
   "icons": {
-    "64": "nutab_logo.svg",
-    "192": "nutab_logo.svg",
-    "512": "nutab_logo.svg"
+    "128": "nutab_logo_128.png"
   },
 
   "chrome_url_overrides": {
