--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "md3-theme-generator": "^0.0.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.31",
     "mui-image": "^1.0.4",
