--- a/public/manifest.chromium.json
+++ b/public/manifest.chromium.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "NuTab",
-  "short_name": "NuTab",
+  "name": "TabScape",
+  "short_name": "TabScape",
   "version": "1.2.0",
   "description": "Replaces your new tab page with a minimalistic clock and beautiful backgrounds.",
   "author": "Freddie Lust-Hed",
   "homepage_url": "https://github.com/Musenkishi/nutab",
   "icons": {
-    "128": "nutab_logo_128.png"
+    "128": "tabscape_logo_128.png"
   },
 
   "chrome_url_overrides": {
