--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,12 @@
   "manifest_version": 3,
   "name": "TabScape",
   "short_name": "TabScape",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Replaces your new tab page with a minimalistic clock and beautiful backgrounds.",
   "author": "Freddie Lust-Hed",
   "homepage_url": "https://github.com/Musenkishi/nutab",
   "icons": {
-    "128": "tabscape_logo_128.png"
+    "128": "tabscape_chromium_compat.png"
   },
 
   "chrome_url_overrides": {
